# rgbdemo

./: .gitmodules
calibration/: calibrate_freenect.cpp  calibrate_kinect.cpp  calibrate_kinect_ir.cpp  calibrate_multiple_kinects.cpp  calibrate_openni_depth.cpp  calibrate_openni_intrinsics.cpp  calibrate_pmdnano.cpp  calibrate_projector.cpp
detect-objects/: CMakeLists.txt  ObjectWindow.ui  RawImagesWindow.cpp  View3dWindow.ui  main.cpp
multikinect/: CMakeLists.txt  View3dWindow.ui
nestk/: CMakeLists.txt
nestk/cmake/: find_nestk_deps.cmake
nestk/ntk/: CMakeLists.txt
nestk/ntk/camera/: file_grabber.h
nestk/ntk/detection/object/: located_feature.cpp
nestk/ntk/mesh/: mesh_viewer.cpp  pcl_utils.cpp  pcl_utils.h  pcl_utils.hpp
people-tracker/: CMakeLists.txt  PeopleTrackerWindow.ui  people_tracker.cpp
reconstructor/: CMakeLists.txt  ModelAcquisitionController.cpp  ModelAcquisitionWindow.ui  reconstructor.cpp
scan-markers/: CMakeLists.txt  ModelAcquisitionController.cpp  ModelAcquisitionWindow.cpp  ModelAcquisitionWindow.ui  scan_markers.cpp
scan-topview/: CMakeLists.txt  GuiController.cpp  ModelAcquisitionWindow.ui  RawImagesWindow.cpp  main.cpp
skeletor/: CMakeLists.txt  skeletor.cpp
viewer/: CMakeLists.txt  CalibrationWindow.cpp  RawImagesWindow.cpp  View3dWindow.ui  viewer.cpp
